--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,24 +1,34 @@
+{{! Main layout setup for handlebars must be tucked into views/layouts/mainlhandlebars }}
+{{! views folder is a required UI component b/c of Model-View-Controller architectural stx for handlebars }}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    {{!-- try to reinsert next line when able  --}}
+    {{!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> --}}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E Commerce Demo</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
+
 <body>
     <div class="wrapper">
         <header>
-            <hi>
-                <a href="/">E Commerce Demo</a>
-            </hi>
+            <h1>
+                <a href="/"> E Commerce Demo </a>
+            </h1>
         </header>
+
         <main>
+            <!-- {{{ body }}} is special placeholder element for handlebar to plug in data later -->
             {{{ body }}}
         </main>
+
         <footer>
             Site Created by Criste Phillips, B.S. Software Engineer
         </footer>
+        
     </div>
 </body>
 </html>
