--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,14 +11,14 @@
       <div class="title">
         {{!-- {{}} 2 curly brackets render as text --}}
         {{!-- {{{}}} 3 render as link for html --}}
-        <a href="{{post_url}}" target="_blank">{{title}}</a>
-        <span>({{post_url}})</span>
+        <a href="{{post.post_url}}" target="_blank">{{post.title}}</a>
+        <span>({{post.post_url}})</span>
       </div>
 
       <div class="meta">
-        {{vote_count}} point(s) by {{user.username}} on {{created_at}} 
+        {{post.vote_count}} point(s) by {{post.user.username}} on {{post.created_at}} 
         |
-        <a href="/post/{{id}}">{{comments.length}} comment(s) </a>
+        <a href="/post/{{post.id}}">{{post.comments.length}} comment(s) </a>
       </div>
     </article>
   </li>
