--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,9 @@
             <h1>
                 <a href="/"> E Commerce Demo </a>
             </h1>
+            <nav>
+                <a href="/login">Login</a>
+            </nav>
         </header>
 
         <main>
