login and signup event listeners added to login js file

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,3 +29,5 @@
         <button type="submit"> Sign Up </button>
     </div>
 </form>
+{{!-- using absolute path, not relative path --}}
+<script src="/javascript/login.js"></script>
