--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,26 +1,3 @@
 {{! All other templates for handlebars go in this file }}
-<div> Welcome to the homepage for E Commerce Demo! </div>
+<div> Welcome to the E Commerce Demo! </div>
 <br />
-
-{{!-- </ol> is placeholder element for handlebar to plug in data later --}}
-<ol class="post-list">
-    {{!-- #each & /each repeats HTML code for every post now --}}
-    {{#each posts}}
-  <li>
-    <article class="post">
-      <div class="title">
-        {{!-- {{}} 2 curly brackets render as text --}}
-        {{!-- {{{}}} 3 render as link for html --}}
-        <a href="{{post.post_url}}" target="_blank">{{post.title}}</a>
-        <span>({{post.post_url}})</span>
-      </div>
-
-      <div class="meta">
-        {{post.vote_count}} point(s) by {{post.user.username}} on {{post.created_at}} 
-        |
-        <a href="/post/{{post.id}}">{{post.comments.length}} comment(s) </a>
-      </div>
-    </article>
-  </li>
-    {{/each}}
-</ol>
