--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,7 @@
             <nav>
                 <a href="/login">Login</a>
             </nav>
+
         </header>
 
         <main>
@@ -29,8 +30,10 @@
 
         <footer>
             Site Created by Criste Phillips, B.S. Software Engineer
-        </footer>
-        
+        </footer>     
     </div>
+        <script src="/javascript/login.js"></script>
+        <script src="/javascript/logout.js"></script>
+        
 </body>
 </html>
