--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -9,3 +9,29 @@
         <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
     </div>
 </article>
+
+<form class="comment-form">
+    <div>
+        <textarea name="comment-body"></textarea>
+    </div>
+
+    <div>
+        <button type="submit">Add Comment</button>
+        <button type="button" class="upvote-btn">Upvote</button>
+    </div>
+</form>
+
+<div class="comments">
+    {{!-- all built-in helpers start w/ # --}}
+     {{#each post.comments}}
+
+<section class="comments">
+    <div class="meta">
+        {{user.username}} on {{created_at}}
+    </div>
+    <div class="text">
+        {{commment_text}}
+    </div>
+</section>
+    {{/each}}
+</div>
