upvote functionality added

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -35,3 +35,7 @@
 </section>
     {{/each}}
 </div>
+
+{{!-- this route was just /javascript/comment.js in notes (?) --}}
+<script src="../public/javascript/comment.js"></script>
+<script src="../public/javascript/upvote.js"></script>
